# toxicclassifier

./: .gitignore  LICENSE  README.md  pyproject.toml
src/toxicclf/: cli.py  config.py  constants.py  train.py
src/toxicclf/data/: dataset.py  loader.py  preprocessing.py  vocabulary.py
src/toxicclf/inference/: predict.py
src/toxicclf/models/: lstm.py
src/toxicclf/training/: metrics.py  trainer.py
src/toxicclf/utils/: io.py  logger.py  setup_nltk.py
